# mobile-use

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BUSINESS_CASE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  QUICK_START.md  README.md  README_IMPROVEMENTS.md  SETUP_GUIDE.md  START_HERE.md  WEB_GUI.md  WIRELESS_ADB.md  WORK_COMPLETED.md  docker-compose.yml  docker-entrypoint.sh  example-task.ps1  llm-config.defaults.jsonc  llm-config.override.template.jsonc  mobile-use.ps1  mobile-use.sh  pyproject.toml  rebuild-docker.ps1  research.md  ruff.toml  slim.Dockerfile  test-gmail-task.ps1  test-setup.ps1
.github/workflows/: dependency-check.yml  deployment.yml  feature.yml  quality-assurance.yml
assets/maestro/: Dockerfile  docker-entrypoint.sh
docs/: 01_tutorials.md  02_how_to_guides.md  03_explanation.md  04_reference.md
minitap/mobile_use/: config.py  context.py  main.py
minitap/mobile_use/clients/: device_hardware_client.py  ios_client.py  screen_api_client.py
minitap/mobile_use/controllers/: mobile_command_controller.py  platform_specific_commands_controller.py
minitap/mobile_use/graph/: graph.py  state.py
minitap/mobile_use/sdk/: __init__.py  agent.py  constants.py  utils.py
minitap/mobile_use/servers/: config.py  device_hardware_bridge.py  device_screen_api.py  start_servers.py  stop_servers.py  utils.py
minitap/mobile_use/services/: llm.py
minitap/mobile_use/tools/: index.py  test_utils.py  (+1 more)
scripts/: create_repo.ps1
scripts/doc/: generate_graph_docs.py
(+64 files in other folders)
