[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minitap-mobile-use"
version = "0.0.0"
description = "Mobile-Use: AI-powered multi-agent system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{ name = "usemanusai" }]
keywords = ["mobile", "automation", "agents", "adb", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = [
  "minitap",
  "minitap.*",
]
exclude = [
  "nicegui*",
  "docs*",
  "query*",
  "tests*",
  "scripts*",
]

